@@ -1,3 +1,7 @@
+-make import under Windows more robust (reported by Per Torhammer)
+-log uncaught exceptions to UI (suggested by Dave Harding)
+-save column width and sort order in card browser
+
 MNEMOSYNE 2.0
 
 Almost three years in the making, this is essentially a complete rewrite of 
